BMI画面に新しい内容の追加

--- a/src/main/resources/templates/BmiInp.html
+++ b/src/main/resources/templates/BmiInp.html
@@ -13,7 +13,7 @@
    </p>
    <form method="get" action="bmiform">
       <p>
-         男性<input type="radio" name="sex" value="0" />
+         男性<input type="radio" name="sex" value="0" checked="checked"/>
          女性<input type="radio" name="sex" value="1" />
       </p>
       <p>
